added and completed hero section

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
-      <div class="logo">Header Logo</div>
+    <div class="header">
+      <div class="logo">Dartori AI</div>
       <div class="nav">
         <ul>
           <li><a href="#">header link one</a></li>
@@ -17,5 +17,17 @@
         </ul>
       </div>
     </div>
+    <div class="hero">
+      <div class="hero-container">
+        <h1>Art Meets Innovation</h1>
+        <p>
+          Unlock the future of creativity with Dartori AI. Transform ideas into
+          stunning visuals in seconds. Explore the limitless possibilities of
+          AI-generated art today.
+        </p>
+        <button class="btn">Sign Up</button>
+      </div>
+      <img src="images/hero.jpg" alt="A futuristic art piece created by AI">
+    </section>
   </body>
 </html>
