added and completed showcase section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,40 @@
         </p>
         <button class="btn">Sign Up</button>
       </div>
-      <img src="images/hero.jpg" alt="A futuristic art piece created by AI">
-    </section>
+      <img src="images/hero.jpg" alt="A futuristic art piece created by AI" />
+    </div>
+    <div class="showcase">
+      <h2 class="showcase-title">Explore Our Showcase</h2>
+      <div class="showcase-container">
+        <div class="showcase-container-1">
+          <img src="images/animal.jpg" alt="A portrait of a sheep" />
+          <p>
+            Experience how Dartori AI captures the beauty and personality of
+            animals in stunning detail.
+          </p>
+        </div>
+        <div class="showcase-container-2">
+          <img src="images/scenery.jpg" alt="A portrait of scenery" />
+          <p>
+            Discover breathtaking landscapes reimagined by Dartori AI, where
+            nature meets creativity.
+          </p>
+        </div>
+        <div class="showcase-container-3">
+          <img src="images/portrait.jpg" alt="A portrait of a girl" />
+          <p>
+            Dartori AI crafts lifelike portraits, bringing emotions and artistry
+            together seamlessly.
+          </p>
+        </div>
+        <div class="showcase-container-4">
+          <img src="images/abstract.jpg" alt="An abstract image" />
+          <p>
+            Dive into bold and imaginative abstract art, created with the
+            limitless potential of Dartori AI.
+          </p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
