completed testimonial section

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       <div class="logo">Dartori AI</div>
       <div class="nav">
         <ul>
-          <li><a href="#">header link one</a></li>
-          <li><a href="#">header link two</a></li>
-          <li><a href="#">header link three</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">FAQs</a></li>
+          <li><a href="#">Policies</a></li>
         </ul>
       </div>
     </div>
@@ -61,6 +61,14 @@
           </p>
         </div>
       </div>
+    </div>
+    <div class="testimonial">
+      <p>
+        "Dartori AI has completely transformed how I create art. What used to
+        take hours now takes just minutes, and the results are beyond what I
+        imagined. It's like having a professional artist at my fingertips!"
+      </p>
+      <div class="author">- Alex Morgan, Digital Artist</div>
     </div>
   </body>
 </html>
