added call to action section

--- a/index.html
+++ b/index.html
@@ -70,5 +70,14 @@
       </p>
       <div class="author">- Alex Morgan, Digital Artist</div>
     </div>
+    <div class="cta">
+      <div class="cta-text">
+        <h3>Ready to transform your creativity?</h3>
+        <p>
+          Join Dartori AI today and start creating stunning visuals in seconds!
+        </p>
+      </div>
+      <button class="cta-button">Sign Up</button>
+    </div>
   </body>
 </html>
