--- a/index.html
+++ b/index.html
@@ -79,5 +79,8 @@
       </div>
       <button class="cta-button">Sign Up</button>
     </div>
+    <div class="footer">
+      <p>Copyright &copy; Dartori AI 2025</p>
+    </div>
   </body>
 </html>
